--- a/Autodock_GPU.ipynb
+++ b/Autodock_GPU.ipynb
@@ -20,7 +20,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Autodock GPU By Purnawan Pontana Putra don't forget configured colab to use a GPU (Runtme->Change runtime type->Hardware Accelerator=GPU)\n"
+        "I configured colab to use a GPU (Runtme->Change runtime type->Hardware Accelerator=GPU) We've configured colab to use a GPU (Runtme->Change runtime type->Hardware Accelerator=GPU)\n"
       ],
       "metadata": {
         "id": "1B8KSDnsCVCG"
