--- a/Autodock_GPU.ipynb
+++ b/Autodock_GPU.ipynb
@@ -225,7 +225,7 @@
     {
       "cell_type": "code",
       "source": [
-        "%adgpu --ffile /content/4ieh_protein.maps.fld --lfile /content/4ieh_ligand.pdbqt --nrun 100"
+        "%adgpu --ffile /content/4ieh_protein.maps.fld --lfile /content/4ieh_ligand.pdbqt --nrun 100 --gbest best.pdbqt"
       ],
       "metadata": {
         "colab": {
