--- a/Autodock_GPU.ipynb
+++ b/Autodock_GPU.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
     "gpuClass": "standard"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/purnawanpp/Docking-4ieh/blob/main/Autodock_GPU.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -46,7 +57,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -84,7 +95,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +121,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "source": [
+        "!sudo apt install nvidia-driver-530 -y"
+      ],
+      "metadata": {
+        "id": "GwrnlKzmdxh4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -154,7 +176,7 @@
       "metadata": {
         "id": "0em3IWfjCO2j"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -165,7 +187,7 @@
       "metadata": {
         "id": "dW3p45aqCleg"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,7 +198,7 @@
       "metadata": {
         "id": "pi4FQ7vvCsXu"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -191,7 +213,7 @@
         "id": "r7awtTOeCxGb",
         "outputId": "805720b7-9539-4bfc-d436-50446ad8696c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,7 +329,7 @@
         "id": "fJH4et79C3CK",
         "outputId": "a2f624dc-4f19-4f81-8d7b-d95b017f3772"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,7 +391,7 @@
         "id": "iIm0LCV5kc1H",
         "outputId": "89b825a0-985d-4563-b0f5-2eaf1b878eba"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,7 +468,7 @@
         "id": "0DjBMesdlV4l",
         "outputId": "a3026f9d-b02f-44b6-8fbb-8913370c17ac"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
